--- a/.github/workflows/fl-infra.yml
+++ b/.github/workflows/fl-infra.yml
@@ -1,13 +1,14 @@
 name: FL provision resources
 
 on:
-    workflow_dispatch
+  workflow_dispatch:
     inputs:
       resource_group:
         description: 'Resource group name'
         required: true
         default: 'flrg20' 
         type: string
+
 
 jobs:
   build:
